[gd_scene load_steps=5 format=3 uid="uid://cikh57wwlinhx"]

[ext_resource type="Texture2D" uid="uid://bhrdv6codvf8o" path="res://assets/Art/Joystick.png" id="1_ye3gh"]
[ext_resource type="Script" uid="uid://b5sfeh1lvxydq" path="res://scenes/Menu/Scripts/joystick_action.gd" id="2_dvky4"]
[ext_resource type="Texture2D" uid="uid://bnsxxq32m38y5" path="res://assets/Art/player_action_buttons.png" id="3_ibmgb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t277f"]
atlas = ExtResource("1_ye3gh")
region = Rect2(30, 30, 132, 132)

[node name="JoystickAction" type="TouchScreenButton"]
self_modulate = Color(1, 0, 0.372549, 1)
scale = Vector2(1.2, 1.2)
texture_normal = SubResource("AtlasTexture_t277f")
script = ExtResource("2_dvky4")

[node name="InnerCircle" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 0, 1)
position = Vector2(66, 66)
scale = Vector2(0.85, 0.85)
texture = ExtResource("1_ye3gh")
region_enabled = true
region_rect = Rect2(30, 30, 132, 132)

[node name="ActionPip" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(66, 66)
texture = ExtResource("3_ibmgb")
region_enabled = true
region_rect = Rect2(262, 268, 52, 54)

[connection signal="released" from="." to="." method="_on_released"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
